crates/plotnik-lib/tests/03-analyze/duplicates/duplicate_definition.txt
Expr = (expression)
Expr = (other)
------------------ DIAGNOSTICS -------------------
error: `Expr` is already defined
 --> query.ptk:2:1
  |
1 | Expr = (expression)
  | ---- first defined here
2 | Expr = (other)
  | ^^^^
-------------------- SYMBOLS ---------------------
Expr
